tests/error/type_errors/invert_not_int.err
Error: Operator not defined (at $FILE:6:12)
  | 
4 | @compile_guppy
5 | def foo() -> int:
6 |     return ~()
  |             ^^ Unary operator `~` not defined for `()`

Guppy compilation failed due to 1 previous error
